# zensical-asciidoctor-backend

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: ci.yml
demo/: zensical.toml
demo/docs/: asciidoc.adoc  features.adoc  markdown.md
demo/docs/asciidoc/: features.adoc  index.adoc
examples/: render_asciidoc.rs  render_demo.rs
src/: config.rs  html.rs  lib.rs  renderer.rs
tests/: integration.rs
tests/fixtures/: simple.adoc
